force-app/main/default/objects/Loan_2__c/Loan_2__c.object-meta.xml
<CustomObject>
    <label>Loan 2</label>
    <nameField>
        <label>Loan 2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loans 2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>