force-app/main/default/objects/Loan_2__c/fields/Hidden_Stage__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Stage__c</fullName>
    <label>Hidden Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Loan_Stage_Enum</valueSetName>
    </valueSet>
</CustomField>